--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-multi-carousel": "^2.8.0",
     "react-redux": "^8.0.1",
     "react-responsive-carousel": "^3.2.23",
