--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-timer-hook": "^3.0.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
